make sly 0.5 compatible
replace rex_select stuff with sly_Form, rename lang files, add css tweaks

--HG--
rename : lang/de_de.lang => lang/de_de.yml
rename : lang/en_gb.lang => lang/en_gb.yml

--- a/assets/css/be_search.css
+++ b/assets/css/be_search.css
@@ -10,9 +10,9 @@
 
 #besearch-toolbar {
 	line-height: 24px;
-	label          { font-weight: bold; margin-right:5px; }
+	label { font-weight: bold; margin-right:5px; }
 	.rex-toolbar-content {
-		padding: 7px !important;
+		padding: 7px 10px !important;
 	}
 }
 
@@ -33,6 +33,4 @@
 #besearch-start-search {
 	margin-left: 0px;
 }
-
-#besearch-media-name   { width: 120px; }
 
