--- a/assets/css/be_search.css
+++ b/assets/css/be_search.css
@@ -10,7 +10,7 @@
 
 #besearch-toolbar {
 	line-height: 24px;
-	label { font-weight: bold; margin-right:5px; }
+	label { font-weight: bold; margin-right:5px; width: auto; display: inline-block; float: none; }
 	.rex-toolbar-content {
 		padding: 7px 10px !important;
 	}
